--- a/GullyTrends/Base.lproj/Main.storyboard
+++ b/GullyTrends/Base.lproj/Main.storyboard
@@ -11,9 +11,9 @@
         <!--Navigation Controller-->
         <scene sceneID="I4b-fb-PPg">
             <objects>
-                <navigationController id="5IY-Hp-MWf" sceneMemberID="viewController">
+                <navigationController navigationBarHidden="YES" id="5IY-Hp-MWf" sceneMemberID="viewController">
+                    <nil key="simulatedTopBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kD7-ra-jfw">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -37,7 +37,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-icons" translatesAutoresizingMaskIntoConstraints="NO" id="0jj-69-nuG">
-                                <rect key="frame" x="0.0" y="44" width="375" height="657"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="701.00000000000011"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="hbC-sK-YYg">
                                 <rect key="frame" x="62.5" y="155" width="250" height="100"/>
@@ -126,6 +126,9 @@
                                         <state key="normal" title="Sign In " backgroundImage="sign-in-btn">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="tapOnLogin:" destination="ZGd-E7-WUt" eventType="touchUpInside" id="va1-7f-CRU"/>
+                                        </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="l5g-oo-b7A">
                                         <rect key="frame" x="77.5" y="194" width="200" height="40"/>
@@ -211,7 +214,7 @@
         <!--AR View Controller-->
         <scene sceneID="WhO-bb-q9e">
             <objects>
-                <viewController id="5Y3-1T-yqh" userLabel="AR View Controller" customClass="ARViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AugmentedRealityVC" id="5Y3-1T-yqh" userLabel="AR View Controller" customClass="AugmentedRealityVC" customModule="GullyTrends" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="IV7-Qy-I3l"/>
                         <viewControllerLayoutGuide type="bottom" id="ZIK-zX-NWO"/>
@@ -220,9 +223,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg-icons" translatesAutoresizingMaskIntoConstraints="NO" id="EvS-O8-7Cs">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-icons" translatesAutoresizingMaskIntoConstraints="NO" id="EvS-O8-7Cs">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667.00000000000011"/>
                                 <color key="backgroundColor" red="0.25618821380000001" green="0.049732334910000002" blue="0.51443523170000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AR-icon" translatesAutoresizingMaskIntoConstraints="NO" id="YxY-tC-a02">
@@ -244,7 +246,7 @@
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Get Your Sizes" backgroundImage="get-your-sizes-btn"/>
                                 <connections>
-                                    <segue destination="vXZ-lx-hvc" kind="push" id="o60-12-jUd"/>
+                                    <action selector="tapOnSizes" destination="5Y3-1T-yqh" eventType="touchUpInside" id="g1H-CK-7NO"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accept terms and Conditions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dah-Xr-D2x">
@@ -253,8 +255,11 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tTg-io-wen">
-                                <rect key="frame" x="267" y="619" width="72" height="30"/>
+                                <rect key="frame" x="280.5" y="627" width="58.5" height="22"/>
                                 <state key="normal" title="  Skip" image="skip-icon"/>
+                                <connections>
+                                    <action selector="tapOnSkip" destination="5Y3-1T-yqh" eventType="touchUpInside" id="ye4-dJ-3hu"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QKw-uP-Noc">
                                 <rect key="frame" x="77" y="492" width="30" height="30"/>
@@ -266,26 +271,32 @@
                                 <state key="selected" image="checked.png"/>
                                 <state key="highlighted" image="unchecked.png"/>
                                 <connections>
-                                    <action selector="checkBoxToggle:" destination="5Y3-1T-yqh" eventType="touchUpInside" id="yhW-W7-Xgg"/>
+                                    <action selector="tapOnTermsAndConditions" destination="5Y3-1T-yqh" eventType="touchUpInside" id="DCr-pF-aj9"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="tTg-io-wen" firstAttribute="leading" relation="lessThanOrEqual" secondItem="FK2-r8-J9w" secondAttribute="leadingMargin" constant="280" id="4To-Vj-KiU"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dah-Xr-D2x" secondAttribute="trailing" constant="20" id="HKR-bc-Nnf"/>
                             <constraint firstItem="dah-Xr-D2x" firstAttribute="leading" secondItem="QKw-uP-Noc" secondAttribute="trailing" constant="10" id="Ndt-AK-xar"/>
                             <constraint firstItem="dah-Xr-D2x" firstAttribute="top" secondItem="YxY-tC-a02" secondAttribute="bottom" constant="30" id="PHs-UE-Yz0"/>
                             <constraint firstItem="Vjk-aZ-ooC" firstAttribute="top" secondItem="QKw-uP-Noc" secondAttribute="bottom" constant="50" id="WZj-ay-Xvw"/>
                             <constraint firstItem="ZIK-zX-NWO" firstAttribute="top" secondItem="tTg-io-wen" secondAttribute="bottom" constant="18" id="cjB-hD-AV7"/>
+                            <constraint firstItem="EvS-O8-7Cs" firstAttribute="top" secondItem="IV7-Qy-I3l" secondAttribute="bottom" id="daa-ws-LuO"/>
                             <constraint firstItem="YxY-tC-a02" firstAttribute="centerX" secondItem="FK2-r8-J9w" secondAttribute="centerX" id="eHl-wd-1SK"/>
                             <constraint firstItem="Vjk-aZ-ooC" firstAttribute="centerX" secondItem="FK2-r8-J9w" secondAttribute="centerX" id="gHA-UT-6yF"/>
                             <constraint firstAttribute="trailingMargin" secondItem="tTg-io-wen" secondAttribute="trailing" constant="20" id="hh5-3j-qQg"/>
                             <constraint firstItem="QKw-uP-Noc" firstAttribute="top" secondItem="YxY-tC-a02" secondAttribute="bottom" constant="25" id="ncv-dc-KGR"/>
+                            <constraint firstItem="EvS-O8-7Cs" firstAttribute="leading" secondItem="FK2-r8-J9w" secondAttribute="leading" id="tKw-wf-R4S"/>
+                            <constraint firstAttribute="trailing" secondItem="EvS-O8-7Cs" secondAttribute="trailing" id="xfg-oj-Vbt"/>
                             <constraint firstItem="YxY-tC-a02" firstAttribute="centerY" secondItem="FK2-r8-J9w" secondAttribute="centerY" multiplier="0.8" id="xwC-LH-rhU"/>
+                            <constraint firstItem="ZIK-zX-NWO" firstAttribute="top" secondItem="EvS-O8-7Cs" secondAttribute="bottom" id="y4S-3M-Cs1"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="a5a-rH-q4Z"/>
+                    <connections>
+                        <outlet property="checkButton" destination="QKw-uP-Noc" id="Ohf-dY-Z87"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t06-hT-FdP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -300,7 +311,7 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -376,7 +387,7 @@
         <!--Main View Controller-->
         <scene sceneID="jZ6-Nu-3CT">
             <objects>
-                <viewController id="Z2I-Sz-A3d" customClass="MainViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainViewController" id="Z2I-Sz-A3d" customClass="MainViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="RX0-GO-ibe"/>
                         <viewControllerLayoutGuide type="bottom" id="X92-Ax-75B"/>
@@ -1659,20 +1670,20 @@
         <image name="back-arrow" width="19.5" height="11"/>
         <image name="bg-icons" width="320" height="569"/>
         <image name="book-tailor" width="27" height="22.5"/>
-        <image name="cart-icon" width="18.5" height="23"/>
+        <image name="cart-icon" width="17" height="20.5"/>
         <image name="checked.png" width="24.5" height="24.5"/>
         <image name="fb-btn" width="109" height="56"/>
         <image name="filter-icon" width="14" height="9"/>
         <image name="get-your-sizes-btn" width="194" height="48"/>
         <image name="girl" width="42" height="42"/>
         <image name="google-btn" width="110" height="56"/>
-        <image name="logo" width="90.5" height="44"/>
+        <image name="logo" width="142" height="68"/>
         <image name="love-icon" width="13.5" height="12"/>
         <image name="menu" width="22" height="22"/>
         <image name="menu-icon" width="22" height="15"/>
         <image name="menu_cart-icon" width="18.5" height="23"/>
         <image name="menu_wishlist-icon" width="18" height="24"/>
-        <image name="search-icon" width="12.5" height="18"/>
+        <image name="search-icon" width="8.5" height="11.5"/>
         <image name="seller-name-link-arrow" width="12" height="7"/>
         <image name="seller-name-star" width="6.5" height="6"/>
         <image name="sign-in-btn" width="222" height="54.5"/>
